Add knex-migrate package

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.5",
+    "knex-migrate": "^1.7.4",
     "nodemon": "^2.0.4",
     "pg": "^8.3.3"
   }
